Update the css and js code

--- a/html/index.html
+++ b/html/index.html
@@ -16,13 +16,15 @@
     <nav>
         <img class="chatLogo" src="../images/chatlogo.png" alt="Chat Logo">
     </nav>
+    <h1 class="heading_chat">Let's start chatting </h1>
+
     <div class="containerMessage">
         <!-- <div class="message right"></div>
         <div class="message left"></div> -->
     </div>
     <div class="sendDiv">
         <form action="#" id="sendContainer">
-            <input type="text" name="messageInput" id="messageInput">
+            <input type="text" name="messageInput" id="messageInput" placeholder="Type your message...">
             <button id="sendBtn" type="submit">Send</button>
         </form>
     </div>
